HelloUltraviolet/Fixtures/RejectedSource/FFI/FfiAttributeDiagnostics/Source/Main.uv
//! Rejected FFI specimen for the FFI attribute diagnostics table.

#mangle("foreign_name")
public procedure mangleOnOrdinaryProcedure() -> i32 {
    return 0
}
